Fixed font size on mobile devices

--- a/Style.css
+++ b/Style.css
@@ -209,7 +209,7 @@ color: white;
 
   @media screen and (max-width: 1024px) {
     .SocialMedia{
-      margin-top: 6%;
+      margin-top: 9%;
     }
     .Avatar{
       width: 25%;
@@ -251,7 +251,7 @@ width: 260px;
     font-size: 24px;
   }
   .flip-card-back > p{
-    font-size: 1rem;
+    font-size: 0.85rem;
   }
   .flip-card-back{
     font-size: 12px;
